pld-comp/tests/ifcc-test-output/testfiles-1_6_var_var_sans_dec/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:11: error: ‘a’ undeclared (first use in this function)
    2 |     int c=a;
      |           ^
input.c:2:11: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
